[gd_scene load_steps=10 format=3 uid="uid://dh2qrg4gl4kqt"]

[ext_resource type="PackedScene" uid="uid://c4mxg6pn32x0l" path="res://scenes/dialogue_engine.tscn" id="1_6757l"]
[ext_resource type="Script" path="res://scripts/win_screen.gd" id="1_mix7m"]
[ext_resource type="Texture2D" uid="uid://b0t0dqehjh7w7" path="res://assets/scenery/good_endscreen.png" id="2_n475s"]
[ext_resource type="Texture2D" uid="uid://cr55ewkgjsvf3" path="res://assets/UI/playagain_button.png" id="4_ujn2q"]
[ext_resource type="Texture2D" uid="uid://dfjxfv6tuqbp2" path="res://assets/UI/playagain_button_pressed.png" id="5_g3i4e"]
[ext_resource type="Texture2D" uid="uid://bvx61anwel15u" path="res://assets/UI/quit_button.png" id="6_66cgf"]
[ext_resource type="Texture2D" uid="uid://e80cxworq1as" path="res://assets/UI/quit_button_pressed.png" id="7_hpugy"]
[ext_resource type="FontFile" uid="uid://dltdgwcyvk5uo" path="res://assets/font/normal_400.ttf" id="8_2hj7s"]

[sub_resource type="LabelSettings" id="LabelSettings_sqnau"]
font = ExtResource("8_2hj7s")
font_size = 48
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[node name="WinScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mix7m")

[node name="DialogueEngine" parent="." instance=ExtResource("1_6757l")]
layout_mode = 1

[node name="WinBG" type="TextureRect" parent="."]
z_index = -3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_n475s")
stretch_mode = 6

[node name="ColorRect" type="ColorRect" parent="."]
z_index = 5
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="PlayAgainButton" type="TextureButton" parent="."]
visible = false
z_index = 1
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = -200.0
offset_right = 750.0
grow_vertical = 0
scale = Vector2(0.75, 0.75)
texture_normal = ExtResource("4_ujn2q")
texture_pressed = ExtResource("5_g3i4e")

[node name="QuitButton" type="TextureButton" parent="."]
visible = false
z_index = 1
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -500.0
offset_top = -200.0
offset_right = 100.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(0.75, 0.75)
texture_normal = ExtResource("6_66cgf")
texture_pressed = ExtResource("7_hpugy")

[node name="Credits" type="Label" parent="."]
visible = false
layout_mode = 1
offset_left = 30.0
offset_top = 30.0
offset_right = 275.0
offset_bottom = 195.0
text = "Game by JamBusters
Nayeon Heo
Sooyeon Yang
Satvik Ellur
Francisco Dominguez"
label_settings = SubResource("LabelSettings_sqnau")

[connection signal="pressed" from="PlayAgainButton" to="." method="_on_play_again_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
